Lots of changes

--- a/config.sample
+++ b/config.sample
@@ -71,6 +71,7 @@
         "admin_email": "some@address.thing",
         "game_server": "Ultros",
         "site_name": "Ultros Market Database",
-        "show_ad": false
+        "show_ad": false,
+        "language": "en"
     }
 }
