There should now be a full database of items. Also a ton of other changes. aaaaaaaaaaaaaaaaaaaaa

--- a/config.sample
+++ b/config.sample
@@ -64,6 +64,9 @@
         "recently_updated": {
             "limit": 50,
             "max_age": 604800
+        },
+        "search": {
+            "limit": 50,
         }
     },
     "meta": {
