--- a/config.sample
+++ b/config.sample
@@ -74,7 +74,6 @@
         "admin_email": "some@address.thing",
         "game_server": "Ultros",
         "site_name": "Ultros Market Database",
-        "show_ad": false,
-        "language": "en"
+        "show_ad": false
     }
 }
