--- a/config.sample
+++ b/config.sample
@@ -66,7 +66,7 @@
             "max_age": 604800
         },
         "search": {
-            "limit": 50,
+            "limit": 50
         }
     },
     "meta": {
